crates/hird-check/tests/snapshots/inference__type_argument_arity.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn f(x: Option) -> Int = 1\")"
---
error[C0005] 8..14: `Option` expects 1 type argument(s), but 0 were given
