crates/hird-check/tests/snapshots/inference__unannotated_function_generalizes.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn pair(x: a, y: b) = (x, y)\")"
---
pair : ∀a b. a → b → (a, b)
