crates/hird-check/tests/snapshots/inference__unbound_name.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = nope\")"
---
main : ∀a. a
error[C0003] 12..16: unbound name `nope`
