crates/hird-check/tests/snapshots/inference__unbound_type_parameter.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"type Box<a> = B(b)\")"
---
error[C0012] 16..17: type parameter `b` is not declared here
