crates/hird-check/tests/snapshots/inference__unit_function.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn unit() = ()\\n\\\n         fn main() = unit()\")"
---
main : () → ()
unit : () → ()
