crates/hird-check/tests/snapshots/inference__unknown_constructor_in_pattern.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn main() = match 1 {\\n\\\n           Whatever(x) -> x,\\n\\\n         }\")"
---
main : ∀a. a
error[C0007] 21..33: unknown constructor `Whatever`
