crates/hird-check/tests/snapshots/inference__unknown_effect_is_rejected.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 579
expression: "check_str(\"fn f(x: Int) -> Int ! {Mystery} = x\")"
---
error[C0027] 23..30: unknown effect `Mystery`
