crates/hird-check/tests/snapshots/inference__unknown_type_name.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn f(x: Nope) -> Int = 1\")"
---
error[C0004] 8..12: unknown type `Nope`
